Fix spacing issues in ItemLookup if there are one or two results

--- a/react-frontend/src/components/App/App.css
+++ b/react-frontend/src/components/App/App.css
@@ -110,11 +110,7 @@ background-color: aqua;
   padding-left: 270px;
 }
 
-.clearfix::after {
-  content: "";
-  display: table;
-  clear: both;
-}
+
 
 #yarnpic {
   display: inline-flex;
@@ -171,4 +167,8 @@ background-color: aqua;
 .right {
   display: flex;
   justify-content: flex-start;
+}
+
+.results-container {
+  width: 100%;
 }
